<resources>
    <string name="app_name">10 Minutes Workout</string>
    <string name="start">Start</string>
    <string name="start_image">Start Image</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_have_done_the_workout">You have done the workout!</string>
    <string name="finish">FINISH</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="are_you_sure_you_want_to_quit">This will stop your workout. You\'ve come this far, are you sure you want to quit?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="_10_minutes_n_workout">10 MINUTES\n WORKOUT!</string>
    <string name="BMI">BMI</string>
    <string name="calculate">Calculate</string>
    <string name="weight_in_kg">WEIGHT (in KG)</string>
    <string name="height_in_cm">HEIGHT (in CM)</string>
    <string name="your_bmi">YOUR BMI</string>
    <string name="us_units">US UNITS</string>
    <string name="metric_units">METRIC UNITS</string>
    <string name="weight_in_pound">WEIGHT (in POUND)</string>
    <string name="feet">Feet</string>
    <string name="inch">Inch</string>
    <string name="history">History</string>
    <string name="no_data_available">NO DATA AVAILABLE</string>
    <string name="exercise_completed">EXERCISE COMPLETED</string>
</resources>