<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BMIActivity"
    android:background="@color/White">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_bmi_activity"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:theme="@style/ToolbarTheme"
        android:background="@color/DarkYellow"/>
    
    <com.google.android.material.textfield.TextInputLayout
        android:layout_below="@+id/toolbar_bmi_activity"
        android:id="@+id/tiMetricUnitWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        app:boxStrokeColor="@color/Black"
        app:hintTextColor="@color/Grass">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etMetricUnitWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight_in_kg"
            android:inputType="numberDecimal"
            android:textSize="18sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_below="@+id/tiMetricUnitWeight"
        android:id="@+id/tiMetricUnitHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        app:boxStrokeColor="@color/Black"
        app:hintTextColor="@color/Grass">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etMetricUnitHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/height_in_cm"
        android:inputType="numberDecimal"
        android:textSize="18sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:padding="10dp"
        android:layout_below="@id/tiMetricUnitHeight"
        android:id="@+id/llDisplayBMIResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        android:visibility="invisible"
        tools:visibility="visible">

        <TextView
            android:id="@+id/tvYourBMI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/your_bmi"
            android:textColor="@color/Light_green"
            android:textStyle="italic|bold"
            android:textAllCaps="true"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tvBMIValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:text="15.00" />

        <TextView
            android:id="@+id/tvBMIType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="@color/Light_green"
            android:textStyle="italic|bold"
            tools:text="Beautiful" />

        <TextView
            android:id="@+id/tvBMIDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="30sp"
            tools:text="Beautiful" />
    </LinearLayout>

    <Button
        android:layout_margin="10dp"
        android:layout_below="@id/llDisplayBMIResult"
        android:id="@+id/btnCalculateUnits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="35dp"
        android:backgroundTint="@color/Black"
        android:text="@string/calculate"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />


</RelativeLayout>
















